# groonga-jmat

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  jema.cpp  jetmctrl.cpp  jmat_mark.h
